--- a/app/src/main/res/layout/activity_add_data_customer.xml
+++ b/app/src/main/res/layout/activity_add_data_customer.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TambahDataSiswaActivity">
+    tools:context=".AddDataCustomerActivity">
 
     <!-- APP BAR -->
     <RelativeLayout
