--- a/app/src/main/res/layout/activity_add_edit_data_customer.xml
+++ b/app/src/main/res/layout/activity_add_edit_data_customer.xml
@@ -22,7 +22,7 @@
             android:layout_height="24dp"/>
 
         <TextView
-            android:text="Edit Data"
+            android:text="Tambah Data Pelanggan"
             android:textStyle="bold"
             android:textSize="16sp"
             android:layout_centerInParent="true"
