--- a/app/src/main/res/layout/activity_add_edit_group.xml
+++ b/app/src/main/res/layout/activity_add_edit_group.xml
@@ -23,7 +23,7 @@
 
         <TextView
             android:id="@+id/tvTitle"
-            android:text="Tambah Grup"
+            android:text="Tambah Data Grup"
             android:textSize="18sp"
             android:textStyle="bold"
             android:layout_centerInParent="true"
