--- a/app/src/main/res/layout/activity_add_edit_data_customer.xml
+++ b/app/src/main/res/layout/activity_add_edit_data_customer.xml
@@ -36,7 +36,7 @@
         android:id="@+id/rvForm"
         android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="0dp"/>
+        android:layout_height="wrap_content"/>
 
     <!-- BUTTON SIMPAN -->
     <Button
