--- a/app/src/main/res/layout/activity_show_data.xml
+++ b/app/src/main/res/layout/activity_show_data.xml
@@ -45,6 +45,7 @@
 
             <!-- WAKTU -->
             <TextView
+                android:id="@+id/tvTitleWaktu"
                 android:text="Waktu Pendataan"
                 android:textStyle="bold"
                 android:layout_width="wrap_content"
@@ -61,7 +62,7 @@
 
             <!-- JENIS SERAGAM -->
             <TextView
-                android:id="@+id/tvJenis"
+                android:id="@+id/tvTitleJenis"
                 android:text="Jenis Seragam"
                 android:textStyle="bold"
                 android:layout_marginTop="16dp"
@@ -69,6 +70,7 @@
                 android:layout_height="wrap_content"/>
 
             <TextView
+                android:id="@+id/tvJenis"
                 android:text="OSIS"
                 android:background="@drawable/bg_input"
                 android:padding="12dp"
@@ -78,6 +80,7 @@
 
             <!-- BERAT -->
             <TextView
+                android:id="@+id/tvTitleBerat"
                 android:text="Berat (Kg)"
                 android:textStyle="bold"
                 android:layout_marginTop="16dp"
@@ -85,6 +88,7 @@
                 android:layout_height="wrap_content"/>
 
             <TextView
+                android:id="@+id/tvBerat"
                 android:text="3 Kg"
                 android:background="@drawable/bg_input"
                 android:padding="12dp"
