--- a/app/src/main/res/layout/item_rv_search_data.xml
+++ b/app/src/main/res/layout/item_rv_search_data.xml
@@ -35,7 +35,7 @@
         </LinearLayout>
         <!-- See Button -->
         <ImageButton
-            android:id="@+id/btnDelete"
+            android:id="@+id/btnShow"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:src="@drawable/ic_next"
