--- a/app/src/main/res/layout/activity_add_edit_group.xml
+++ b/app/src/main/res/layout/activity_add_edit_group.xml
@@ -57,6 +57,8 @@
 
                 <EditText
                     android:id="@+id/etTanggal"
+                    android:focusable="false"
+                    android:clickable="true"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:hint="22 Nov 2024"
@@ -65,6 +67,8 @@
 
                 <EditText
                     android:id="@+id/etJam"
+                    android:focusable="false"
+                    android:clickable="true"
                     android:layout_width="80dp"
                     android:hint="11:12"
                     android:background="@drawable/bg_input"
