--- a/app/src/main/res/layout/activity_add_edit_group.xml
+++ b/app/src/main/res/layout/activity_add_edit_group.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TambahGrupActivity">
+    tools:context=".activity.AddEditGroupActivity">
 
     <!-- HEADER -->
     <RelativeLayout
@@ -19,7 +19,7 @@
             android:layout_height="40dp"
             android:layout_centerVertical="true"
             android:layout_marginStart="8dp"
-            android:src="@drawable/ic_prev" />
+            android:src="@drawable/ic_back" />
 
         <TextView
             android:id="@+id/tvTitle"
