login ok, show dari listdatafragment atau load data ok, deletedata ok, cbstatus masih error (restart sendiri waktu ganti aktivitas atau tekan btn lain), showdataactivity belum mau show data customer, addeditdatacustomeractivity masih belum mau save data ke database.

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:padding="24dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.LoginActivity">
+    tools:context=".ui.login.LoginActivity">
 
     <!-- LOGO -->
     <ImageView
