--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:background="#F2F2F2"
-    tools:context=".activity.SearchActivity">
+    tools:context=".ui.search.SearchActivity">
 
     <!-- Top Search Bar -->
     <LinearLayout
