--- a/app/src/main/res/layout/activity_show_data.xml
+++ b/app/src/main/res/layout/activity_show_data.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    tools:context=".activity.ShowDataActivity">
+    tools:context=".ui.showdata.ShowDataActivity">
 
     <!-- HEADER -->
     <RelativeLayout
